# litools

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo.md
apps/desktop/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: core-webview.json  default.json  main-capability.json  plugin-capability.json  plugin-runtime.json  plugin-webview.json
apps/desktop/src-tauri/permissions/litools-core/: allow-diagnostics.toml  allow-launcher.toml  allow-plugins-manage.toml  allow-plugins.toml  allow-settings.toml  allow-surface.toml  default.toml
apps/desktop/src-tauri/permissions/litools-sdk/: allow-commands.toml  allow-diagnostics.toml  allow-input-detector.toml  allow-plugins-list.toml  allow-runtime.toml  allow-search-provider.toml  allow-settings-read.toml  allow-settings-write.toml  allow-storage.toml  allow-ui-close.toml  allow-ui-toast.toml  allow-ui.toml  default.toml
apps/desktop/src-tauri/src/: app_watcher.rs  commands.rs  events.rs  icon_cache.rs  icon_protocol.rs  index_refresh.rs  macos_icon.rs  main.rs  plugin_protocol.rs  shortcut.rs  state.rs  tray.rs  view.rs  window.rs
apps/desktop/src-tauri/src/background/: manager.rs  mod.rs  runtime.rs
apps/desktop/src-tauri/src/core/: diagnostics.rs  events.rs  executor.rs  launcher.rs  mod.rs  settings.rs
apps/desktop/src-tauri/src/core/executor/: background.rs  mod.rs  webview.rs
apps/desktop/src-tauri/src/core/plugins/: commands.rs  dispatch.rs  mod.rs  resolver.rs
apps/desktop/src-tauri/src/core/plugins/runtime/: capability.rs  commands.rs  detection_bridge.rs  detector_registry.rs  js_detector_adapter.rs  method_registry.rs  mod.rs  model.rs  permissions.rs  registry.rs  search_bridge.rs  search_provider.rs  service.rs  webview_search_runtime.rs
apps/desktop/src-tauri/src/core/surface/: commands.rs  events.rs  mod.rs  model.rs  registry.rs  service.rs
apps/desktop/src-tauri/src/ipc/: diagnostics.rs  launcher.rs  mod.rs  plugins.rs  settings.rs  surface.rs
apps/desktop/src-tauri/src/plugin_runtime/: ipc.rs  mod.rs  model.rs  permissions.rs  preload.rs  registry.rs  service.rs
apps/desktop/src-tauri/src/protocol/: icon.rs  icon_cache.rs  icon_disk_cache.rs  mod.rs  plugin.rs
apps/desktop/src-tauri/src/sdk/: mod.rs
apps/desktop/src-tauri/src/surface/: events.rs  mod.rs  model.rs  registry.rs  service.rs
apps/desktop/src-tauri/src/tauri_plugins/: constants.rs  core.rs  mod.rs  sdk.rs
apps/desktop/src-tauri/src/view/: model.rs  registry.rs
apps/desktop/src-tauri/src/windowing/: factory.rs  labels.rs  lifecycle.rs  mod.rs  native.rs  positioning.rs  reparent.rs  webview.rs
apps/desktop/src/bridge/: commands.ts  events.ts  types.ts
apps/desktop/src/components/: Button.tsx  InfoRow.tsx  ManagementHeader.tsx  ManagementLayout.tsx  ManagementNav.tsx  PageHeader.tsx  PageState.tsx  Panel.tsx  ResultIcon.tsx  RuntimeHeader.tsx  RuntimeLayout.tsx  WindowFrame.tsx  WorkspaceHeader.tsx  WorkspaceView.tsx
apps/desktop/src/hooks/: useAppEvents.ts  usePluginMatch.ts
apps/desktop/src/shared/: events.ts  keyboard.ts  labels.ts  routes.ts  store.ts  strings.ts  theme.ts
apps/desktop/src/views/: registry.ts
crates/litools-config/: Cargo.toml
crates/litools-config/src/: app.rs  events.rs  icon.rs  labels.rs  lib.rs  plugin.rs  protocol.rs  search.rs  settings.rs  text.rs  window.rs
crates/litools-core/: Cargo.toml
crates/litools-core/src/: app.rs  app_provider.rs  command.rs  commands_plugin.rs  context.rs  context_analyzer.rs  error.rs  event.rs  execution_service.rs  executor_registry.rs  extension_registry.rs  indexing_service.rs  input_plugin.rs  internal_plugin.rs  launcher.rs  launcher_plugin.rs  lib.rs  pinning_service.rs  plugin_host.rs  plugin_provider.rs
crates/litools-core/src/app/: execution.rs  indexing.rs  launcher.rs  pinning.rs  plugins.rs  search.rs  settings.rs
crates/litools-core/src/detectors/: base64.rs  color.rs  curl.rs  file_path.rs  image.rs  json.rs  jwt.rs  markdown.rs  mod.rs  url.rs  uuid.rs
crates/litools-core/tests/: context_analyzer_integration.rs
crates/litools-index/: Cargo.toml
crates/litools-index/src/: db.rs  lib.rs  migrations.rs  repository.rs  schema.rs
crates/litools-index/src/repository/: apps.rs  commands.rs  metadata.rs  mod.rs  pinned.rs  plugin_commands.rs  plugin_storage.rs  plugins.rs  (+2 more)
crates/litools-plugin/: Cargo.toml
crates/litools-plugin/src/: api.rs  discovery.rs  ids.rs  lib.rs  manager.rs  manifest.rs  marketplace.rs  permission.rs  runtime.rs
crates/litools-search/: Cargo.toml
crates/litools-search/src/: detector.rs  engine.rs  input.rs  lib.rs  matcher.rs  provider.rs  query.rs  ranking.rs  request.rs  runtime.rs
crates/litools-search/tests/: context_ranking_integration.rs
crates/litools-settings/: Cargo.toml
crates/litools-settings/src/: lib.rs  profile.rs  settings.rs  storage.rs
crates/litools-system/: Cargo.toml
crates/litools-system/src/: adapter.rs  app_indexer.rs  clipboard.rs  file_indexer.rs  hotkey.rs  launcher.rs  lib.rs  pinyin.rs
crates/litools-system/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/litools-telemetry/: Cargo.toml
crates/litools-telemetry/src/: diagnostics.rs  lib.rs  logging.rs  metrics.rs
migrations/: 0001_initial.sql
plugins/bundled/diagnostics/: plugin.json
plugins/bundled/hello-world/: package-lock.json  package.json  plugin.json  tsconfig.json  vite.config.ts
plugins/bundled/launcher/: plugin.json
plugins/bundled/plugin-manager/: .gitignore  index.html  package.json  plugin.json  vite.config.ts
plugins/bundled/settings/: .gitignore  index.html  package.json  plugin.json  tsconfig.json  vite.config.ts
plugins/examples/hello-world/: litools.plugin.json  plugin.json
plugins/sdk/: package.json
plugins/sdk/src/: index.ts
schemas/: marketplace.schema.json  plugin-manifest.schema.json  settings.schema.json
(+34 files in other folders)
