[package]
name = "litools-search"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
