[package]
name = "litools-system"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
image.workspace = true
notify.workspace = true
pinyin.workspace = true
plist.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
