[package]
name = "litools-desktop"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
litools-core.workspace = true
litools-search.workspace = true
litools-settings.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tokio.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
