[package]
name = "litools-desktop"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono.workspace = true
icns.workspace = true
image.workspace = true
litools-core.workspace = true
litools-index.workspace = true
litools-search.workspace = true
litools-settings.workspace = true
litools-system.workspace = true
lru.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["unstable", "macos-private-api", "tray-icon", "image-png"] }
tokio.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
