[package]
name = "litools-desktop"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
litools-config.workspace = true
chrono.workspace = true
icns.workspace = true
image.workspace = true
litools-core.workspace = true
litools-index.workspace = true
litools-plugin.workspace = true
litools-search.workspace = true
litools-settings.workspace = true
litools-system.workspace = true
log.workspace = true
lru.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["unstable", "macos-private-api", "tray-icon", "image-png", "dynamic-acl"] }
tempfile.workspace = true
tokio.workspace = true
walkdir.workspace = true
zip.workspace = true
uuid.workspace = true
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-upload = "2"
tauri-plugin-sql = "2"
tauri-plugin-authenticator = "2.0.0-rc.1"
tauri-plugin-geolocation = "2"
tauri-plugin-haptics = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-positioner = "2"
tauri-plugin-opener = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
